--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -64,10 +64,6 @@
             Sélectionner la caméra :
             <select id="cameraSelect"></select>
         </label>
-        <label>
-            Utilisateurs disponibles :
-            <select id="userList"></select>
-        </label>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
@@ -75,20 +71,31 @@
         let localStream;
         let peer;
         let call;
-        const cameraSelect = document.getElementById('cameraSelect');
-        const userList = document.getElementById('userList');
-        let userIds = [];
 
-        document.getElementById('generateMyId').addEventListener('click', () => {
+        const callButton = document.getElementById('callButton');
+        const hangupButton = document.getElementById('hangupButton');
+        const generateMyIdButton = document.getElementById('generateMyId');
+        const myIdInput = document.getElementById('myId');
+        const peerIdInput = document.getElementById('peerId');
+        const localVideo = document.getElementById('localVideo');
+        const remoteVideo = document.getElementById('remoteVideo');
+        const muteCheckbox = document.getElementById('muteCheckbox');
+        const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
+        const cameraSelect = document.getElementById('cameraSelect');
+        const cameraLabel = document.getElementById('cameraLabel');
+
+        // Génère un ID aléatoire pour le peer
+        generateMyIdButton.addEventListener('click', () => {
             const myId = generateRandomId();
-            document.getElementById('myId').value = myId;
+            myIdInput.value = myId;
             localStorage.setItem('chatUsername', myId);
             initializePeer(myId);
         });
 
+        // Charge l'ID stocké si disponible
         const storedId = localStorage.getItem('chatUsername');
         if (storedId) {
-            document.getElementById('myId').value = storedId;
+            myIdInput.value = storedId;
             initializePeer(storedId);
         }
 
@@ -97,17 +104,16 @@
 
             peer.on('open', () => {
                 console.log('My peer ID is: ' + id);
-                updateUserList();
             });
 
             peer.on('call', (incomingCall) => {
                 getLocalStream()
                     .then((stream) => {
                         localStream = stream;
-                        document.getElementById('localVideo').srcObject = stream;
+                        localVideo.srcObject = stream;
                         incomingCall.answer(stream);
                         incomingCall.on('stream', (remoteStream) => {
-                            document.getElementById('remoteVideo').srcObject = remoteStream;
+                            remoteVideo.srcObject = remoteStream;
                         });
                     })
                     .catch((err) => {
@@ -115,11 +121,15 @@
                     });
             });
 
-            peer.on('connection', (conn) => {
-                conn.on('data', (data) => {
-                    console.log('Received data: ', data);
+            // Vérifie chaque 5 secondes si les utilisateurs dans le ComboBox sont toujours valides
+            setInterval(() => {
+                const options = cameraSelect.querySelectorAll('option');
+                options.forEach(option => {
+                    if (!peer.listAllPeers().includes(option.value)) {
+                        option.remove();
+                    }
                 });
-            });
+            }, 5000);
         }
 
         function generateRandomId() {
@@ -131,8 +141,8 @@
             return navigator.mediaDevices.getUserMedia(constraints)
                 .then(stream => {
                     localStream = stream;
-                    document.getElementById('localVideo').srcObject = stream;
-                    applyMicMute();
+                    localVideo.srcObject = stream;
+                    applyMicMute(); // Applique le mute initial selon l'état du checkbox
                     return stream;
                 })
                 .catch((err) => {
@@ -149,18 +159,42 @@
             };
 
             if (device === 'iOS') {
-                await listCameras();
+                // Pour iOS, lister les caméras disponibles
+                await listCameras(); // Fonction pour lister les caméras
                 constraints.video = {
                     deviceId: { exact: cameraSelect.value }
                 };
-            } else {
+            } else if (device === 'Android') {
+                // Pour Android, utiliser la caméra arrière par défaut
                 constraints.video = {
                     facingMode: 'environment'
                 };
-                cameraSelect.style.display = 'none';
+            } else {
+                constraints.video = {
+                    facingMode: 'user' // Utiliser la caméra frontale par défaut pour les autres appareils
+                };
             }
 
             return constraints;
+        }
+
+        async function listCameras() {
+            try {
+                const devices = await navigator.mediaDevices.enumerateDevices();
+                const videoDevices = devices.filter(device => device.kind === 'videoinput');
+                cameraSelect.innerHTML = '';
+                videoDevices.forEach((device, index) => {
+                    const option = document.createElement('option');
+                    option.value = device.deviceId;
+                    option.text = device.label || `Camera ${index + 1}`;
+                    cameraSelect.appendChild(option);
+                });
+                const defaultCamera = videoDevices.find(device => device.label.toLowerCase().includes('front')) ||
+                    videoDevices[0];
+                cameraSelect.value = defaultCamera.deviceId;
+            } catch (err) {
+                console.error('Error listing cameras', err);
+            }
         }
 
         function detectDevice() {
@@ -181,7 +215,7 @@
             if (localStream) {
                 const audioTracks = localStream.getAudioTracks();
                 if (audioTracks.length > 0) {
-                    audioTracks[0].enabled = !document.getElementById('muteCheckbox').checked;
+                    audioTracks[0].enabled = !muteCheckbox.checked;
                 }
             }
         }
@@ -196,8 +230,8 @@
             }
         }
 
-        document.getElementById('callButton').addEventListener('click', () => {
-            const peerId = document.getElementById('peerId').value.trim();
+        callButton.addEventListener('click', () => {
+            const peerId = peerIdInput.value.trim();
             if (!peerId) {
                 alert('Veuillez entrer l\'ID de la personne à appeler.');
                 return;
@@ -206,14 +240,14 @@
             getLocalStream()
                 .then((stream) => {
                     localStream = stream;
-                    document.getElementById('localVideo').srcObject = stream;
-                    applyMicMute();
+                    localVideo.srcObject = stream;
+                    applyMicMute(); // Applique le mute initial
                     call = peer.call(peerId, stream);
                     call.on('stream', (remoteStream) => {
-                        document.getElementById('remoteVideo').srcObject = remoteStream;
+                        remoteVideo.srcObject = remoteStream;
                     });
                     call.on('close', () => {
-                        document.getElementById('remoteVideo').srcObject = null;
+                        remoteVideo.srcObject = null;
                     });
                 })
                 .catch((err) => {
@@ -221,119 +255,57 @@
                 });
         });
 
-        document.getElementById('hangupButton').addEventListener('click', () => {
+        hangupButton.addEventListener('click', () => {
             if (localStream) {
                 localStream.getTracks().forEach(track => track.stop());
             }
             if (call) {
                 call.close();
             }
-            document.getElementById('localVideo').srcObject = null;
-            document.getElementById('remoteVideo').srcObject = null;
+            localVideo.srcObject = null;
+            remoteVideo.srcObject = null;
         });
 
-        document.getElementById('muteCheckbox').addEventListener('change', () => {
+        muteCheckbox.addEventListener('change', () => {
             applyMicMute();
         });
 
-        document.getElementById('muteRemoteCheckbox').addEventListener('change', () => {
-            sendMuteSignal(document.getElementById('muteRemoteCheckbox').checked);
+        muteRemoteCheckbox.addEventListener('change', () => {
+            if (call) {
+                sendMuteSignal(muteRemoteCheckbox.checked);
+            }
         });
 
-        async function listCameras() {
-            try {
-                const devices = await navigator.mediaDevices.enumerateDevices();
-                const videoDevices = devices.filter(device => device.kind === 'videoinput');
-                cameraSelect.innerHTML = '';
-                videoDevices.forEach((device, index) => {
-                    const option = document.createElement('option');
-                    option.value = device.deviceId;
-                    option.text = `Caméra ${index + 1}`;
-                    cameraSelect.appendChild(option);
-                });
-                const defaultCamera = videoDevices.find(device => device.label.toLowerCase().includes('front'));
-                cameraSelect.value = defaultCamera ? defaultCamera.deviceId : videoDevices[0].deviceId;
-            } catch (err) {
-                console.error('Error listing cameras', err);
-            }
+        // Fonction pour sauvegarder la caméra sélectionnée
+        cameraSelect.addEventListener('change', () => {
+            const selectedCameraId = cameraSelect.value;
+            getLocalStream(); // Recharge le stream avec la caméra sélectionnée
+        });
+
+        // Fonction pour vérifier si les utilisateurs sont toujours valides dans le combobox
+        function checkUsersValidity() {
+            const options = cameraSelect.querySelectorAll('option');
+            options.forEach(option => {
+                if (!peer.listAllPeers().includes(option.value)) {
+                    option.remove();
+                }
+            });
         }
 
-        cameraSelect.addEventListener('change', async () => {
-            if (localStream) {
-                localStream.getTracks().forEach(track => track.stop());
+        // Vérifie chaque 5 secondes si les utilisateurs dans le ComboBox sont toujours valides
+        setInterval(checkUsersValidity, 5000);
+
+        // Initialisation
+        async function initialize() {
+            const constraints = await detectCameraConstraints();
+            if (constraints.video.deviceId) {
+                cameraSelect.value = constraints.video.deviceId;
             }
             await getLocalStream();
-        });
-
-        async function updateUserList() {
-            userList.innerHTML = '';
-            const ids = Array.from(userIds);
-            ids.forEach(id => {
-                const option = document.createElement('option');
-                option.value = id;
-                option.text = id;
-                userList.appendChild(option);
-            });
+            await listCameras();
         }
 
-        function checkUserStatus() {
-            setInterval(async () => {
-                userIds = userIds.filter(id => {
-                    // This is a simple check, assuming a more comprehensive check in real application
-                    return peer.connections[id] && peer.connections[id].length > 0;
-                });
-                await updateUserList();
-            }, 5000);
-        }
-        document.addEventListener('DOMContentLoaded', () => {
-            // Start checking user status every 5 seconds
-            checkUserStatus();
-        });
-
-        function checkUserStatus() {
-            setInterval(async () => {
-                const updatedUserIds = [];
-                for (const id of userIds) {
-                    if (peer.connections[id] && peer.connections[id].length > 0) {
-                        updatedUserIds.push(id);
-                    }
-                }
-                userIds = updatedUserIds;
-                await updateUserList();
-            }, 5000);
-        }
-
-        document.getElementById('peerId').addEventListener('input', (event) => {
-            const id = event.target.value.trim();
-            if (id && !userIds.includes(id)) {
-                userIds.push(id);
-                updateUserList();
-            }
-        });
-
-        // Handling peer connections
-        peer.on('connection', (conn) => {
-            conn.on('open', () => {
-                console.log(`Connected to ${conn.peer}`);
-                userIds.push(conn.peer);
-                updateUserList();
-                conn.on('close', () => {
-                    console.log(`Disconnected from ${conn.peer}`);
-                    userIds = userIds.filter(id => id !== conn.peer);
-                    updateUserList();
-                });
-            });
-        });
-
-        peer.on('disconnected', () => {
-            console.log('Peer disconnected');
-            userIds = [];
-            updateUserList();
-        });
-
-        peer.on('error', (err) => {
-            console.error('Peer error:', err);
-        });
+        initialize();
     </script>
 </body>
 </html>
